                    -each row created programatically (using ng for loop)
                        - displays row index
                        - displays album cover
                        - displays song name
                        - displays monthly listeners
                        - displays play time
                - about-section (10/11/22)
                    - displays image of artist
                    - displays artists world ranking
                    - displays artists monthly listeners
                    - displays description of artist

            - search-page-layout
                - added search-nav-bar (10/09/22)
                    - search navbar completely refactors top-nav-bar. 
                        - not going to implement top-nav-bar refactor until I know it properly interacts with search-page-layout
                    - added search bar which a user can type into
                - added genre-card (10/11/22)
                    - created using ng for loop
                        - displays background color
                        - displays img for card
                        - displays name of card
                - added browse-all-header (10/11/22)
                    - header which spaces genre-cards from header and displays "browse all" text

    Bonus Features:
        - enabled scrolling within content area (sec-nav-bar is fixed to screen)

- Lab 6
    - Main Features
        - converted cards, genre-cards, and popular-section from mock list binding to database binding (10/14/22)
        - created artist-card component (10/14/22)
            - data bindings from database

    - Bonus Features
        - increased amount of data for card components (10/14/22)

- Lab 7
    -Main Features  
        - I implemented Lab 7 features in lab 6
        - I completed lab 8 for lab 7 (10/23/22)
            - set up my app for web deployment


                
                    
                    
                    